--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -24,9 +24,20 @@ server{
 		autoindex: on
 		allowed_methods: GET,POST,DELETE 
 	>
+	location: /test <
+		cgi: on
+		autoindex: on
+		allowed_methods: GET,POST,DELETE 
+	>
+	location: /test <
+		cgi: on
+		autoindex: on
+		allowed_methods: GET,POST,DELETE 
+	>
 }
-sad
-server {
+
+
+server{
 	listen: 12.12.12.12:80
 	server_name: test.com
 }
