--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -14,28 +14,19 @@
 # 	}
 # }
 
-server{
+server {
 	listen: 0.0.0.0:80
-	server_name: test.com
-	client_max_body_size: 100
-	error_page: 404,errors_pages/error404.html
+	server_name
+	client_max_body_size: 200
+	error_page: 408,errors_pages/error408.html
 	location: /test <
+		allowed_methods: GET,POST,DELETE
+		rewrite:
+		root: /data
 		cgi: on
 		autoindex: on
-		allowed_methods: GET,POST,DELETE 
-	>
-	location: /test <
-		cgi: on
-		autoindex: on
-		allowed_methods: GET,POST,DELETE 
-	>
-	location: /test <
-		cgi: on
-		autoindex: on
-		allowed_methods: GET,POST,DELETE 
 	>
 }
-
 
 server{
 	listen: 12.12.12.12:80
