locations super nickel

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -14,21 +14,33 @@
 # 	}
 # }
 
+### spaces are ignored, one instruction per line
+### server {} is the minimum
+### multiple instructions will override
+### order doesn't matter
+### unrecognized keyword will be ignored
+
 server {
 	listen: 0.0.0.0:80
 	server_name
 	client_max_body_size: 200
 	error_page: 408,errors_pages/error408.html
-	location: /test <
-		allowed_methods: GET,POST,DELETE
+
+	location: /test
+		allowed_methods: GET,POST
 		rewrite:
-		root: /data
+		root: /data/test
 		cgi: on
 		autoindex: on
-	>
+		default_dir_request: ./default/file
+		upload_dir: ./upload_her
+	
+	location: /lol
+	location: /
+		root: /boum
 }
 
-server{
+server {
 	listen: 12.12.12.12:80
 	server_name: test.com
 }
