--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -29,18 +29,20 @@ server {
 	location: /test
 		allowed_methods: GET,POST
 		rewrite:
-		root: /data/test
+		root:
 		cgi: on
 		autoindex: on
 		default_dir_request: ./default/file
 		upload_dir: ./upload_her
-	
-	location: /lol
 	location: /
 		root: /boum
 }
 
 server {
-	listen: 12.12.12.12:80
+	listen: 80
+	server_name: test.com
+}
+server {
+	listen: 192.168.0.1:80
 	server_name: test.com
 }
