find_location ok

--- a/srcs/response/default.conf
+++ b/srcs/response/default.conf
@@ -6,7 +6,7 @@
 ### Default server configured in Server.cpp :
 ### 	listen:	0.0.0.0:8000
 server {
-	listen: 0.0.0.0:8000
+	listen: 127.0.0.1:8000
 	server_name
 	client_max_body_size: 200
 	error_page: 408,errors_pages/error408.html
@@ -19,25 +19,43 @@ server {
 		autoindex: on
 		default_dir_request: ./default/file
 		upload_dir: ./upload_her
+
+	location: /salut
+		root: /boum
+	
+	location: /
+}
+
+server {
+	listen: 0.0.0.0:8000
+	server_name: supersite.com
+	client_max_body_size: 200
+	error_page: 408,errors_pages/error408.html
+
+	location: /test
+		allowed_methods: GET,POST
+		autoindex: off
+		default_dir_request: ./default/file
+		upload_dir: ./upload_her
+	location: /salut
+		root: /boum
+}
+
+server {
+	listen: 127.0.0.1:333
+	server_name: test.com
 	location: /
 		root: /boum
 }
 
-# server {
-# 	listen: 127.0.0.1:8000
-# 	server_name: test.com
-# 	location: /
-# 		root: /boum
-# }
+server {
+	listen: 127.0.0.2:8000
+	server_name: truc.com
+	location: /salut
+		root: /bam
+}
 
-# server {
-# 	listen: 127.0.0.1:8000
-# 	server_name: truc.com
-# 	location: /salut
-# 		root: /bam
-# }
-
-# server {
-# 	listen: 192.168.0.1:80
-# 	server_name: test.com
-# }
+server {
+	listen: 192.168.0.1:80
+	server_name: test.com
+}
