response + check begin

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -23,19 +23,35 @@
 server {
 	listen: 0.0.0.0:8000
 	server_name
-	client_max_body_size: 200
+	client_max_body_size: 10
 	error_page: 408,errors_pages/error408.html
 
-	location: /test
-		allowed_methods: GET,POST
+	location: /get
+		allowed_methods: GET
+		rewrite:
+		root: ./data
+		cgi: on
+		autoindex: on
+		default_dir_request: ./default/file
+		upload_dir: ./upload_her
+
+	location: /rewrite
+		allowed_methods: GET
+		rewrite: /rewrite /get
+		root: ./data
+		cgi: on
+		autoindex: on
+		default_dir_request: ./default/file
+		upload_dir: ./upload_her
+
+	location: /post
+		allowed_methods: POST
 		rewrite:
 		root:
 		cgi: on
 		autoindex: on
 		default_dir_request: ./default/file
 		upload_dir: ./upload_her
-	location: /
-		root: /boum
 }
 
 server {
