--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -52,6 +52,14 @@ server {
 		autoindex: on
 		default_dir_request: ./default/file
 		upload_dir: ./upload_her
+
+	location: /
+		cgi: off
+		root: ./data/static
+
+	location: /static
+	location: /cgi
+		cgi: on
 }
 
 server {
