error codes + rewrite

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -23,7 +23,7 @@
 server {
 	listen: 0.0.0.0:8000
 	server_name
-	client_max_body_size: 10
+	client_max_body_size: 1000
 	error_page: 408,errors_pages/error408.html
 
 	location: /get
@@ -37,7 +37,7 @@ server {
 
 	location: /rewrite
 		allowed_methods: GET
-		rewrite: /rewrite /get 
+		rewrite: /rewrite 
 		root: ./data
 		cgi: on
 		autoindex: on
@@ -58,6 +58,8 @@ server {
 		root: ./data/static
 
 	location: /static
+		rewrite: /truc,/download.jpeg
+		autoindex: off
 	location: /cgi
 		cgi: on
 }
