--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -55,7 +55,7 @@ server {
 
 	location: /
 		cgi: off
-		root: ./data/static
+		root: ./data/
 
 	location: /static
 		rewrite: /truc,/download.jpeg
