--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -32,7 +32,6 @@ server {
 		root: ./data
 		cgi: on
 		autoindex: on
-		default_dir_request: ./default/file
 		upload_dir: ./upload_her
 
 	location: /rewrite
@@ -58,8 +57,8 @@ server {
 		root: ./data/static
 
 	location: /static
-	location: /cgi
-		cgi: on
+		autoindex: on
+
 }
 
 server {
