--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -26,31 +26,10 @@ server {
 	client_max_body_size: 1000
 	error_page: 408,errors_pages/error408.html
 
-	location: /get
-		allowed_methods: GET
-		rewrite:
-		root: ./data
+	location: /delete
+		allowed_methods: DELETE
 		cgi: on
 		autoindex: on
-		upload_dir: ./upload_her
-
-	location: /rewrite
-		allowed_methods: GET
-		rewrite: /rewrite 
-		root: ./data
-		cgi: on
-		autoindex: on
-		default_dir_request: ./default/file
-		upload_dir: ./upload_her
-
-	location: /post
-		allowed_methods: POST
-		rewrite:
-		root:
-		cgi: on
-		autoindex: on
-		default_dir_request: ./default/file
-		upload_dir: ./upload_her
 
 	location: /
 		cgi: off
