--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -26,20 +26,19 @@ server {
 	client_max_body_size: 1000
 	error_page: 408,errors_pages/error408.html
 
-	location: /delete
-		allowed_methods: DELETE
+	location: /static/delete
+		allowed_methods: GET,DELETE,POST
 		cgi: on
 		autoindex: on
 
 	location: /
-		cgi: off
+		allowed_methods: GET, POST
+		cgi: on
 		root: ./data
 
 	location: /static
 		rewrite: /truc,/download.jpeg
 		autoindex: off
-	location: /cgi
-		cgi: on
 }
 
 server {
