reorganize + error page

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -21,14 +21,14 @@
 ### unrecognized keyword will be ignored
 
 server {
-	listen: 0.0.0.0:8000
+	listen: 127.0.0.1:8000
 	server_name
 	client_max_body_size: 1000
-	error_page: 408,errors_pages/error408.html
+	error_page:
 
 	location: /static/delete
-		allowed_methods: GET,DELETE,POST
-		cgi: on
+		allowed_methods: GET,DELETE
+		cgi: off
 		autoindex: on
 
 	location: /
@@ -36,16 +36,16 @@ server {
 		cgi: on
 		root: ./data
 
-	location: /static
-		rewrite: /truc,/download.jpeg
+	location: /static/
+		rewrite: /truc, /images/download.jpeg
 		autoindex: off
 }
 
 server {
-	listen: 80
-	server_name: test.com
+	listen: 0.0.0.0:8000
 }
+
 server {
-	listen: 192.168.0.1:80
+	listen: 127.0.0.1:80
 	server_name: test.com
 }
