need directory listing and test index

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -24,21 +24,34 @@ server {
 	listen: 127.0.0.1:8000
 	server_name
 	client_max_body_size: 1000
-	error_page:
+	error_page: 404, ./data/error_pages/404.html
 
 	location: /static/delete
 		allowed_methods: GET,DELETE
 		cgi: off
 		autoindex: on
 
+	location: /test
+		rewrite: /test, /static
+		allowed_methods: GET, DELETE
+		index: prout.html
+
 	location: /
-		allowed_methods: GET, POST
-		cgi: on
+		allowed_methods: GET
+		cgi: off
+		index: index.html
 		root: ./data
 
-	location: /static/
+	location: /cgi
+		allowed_methods: GET, POST
+		cgi: on
+
+	location: /static
 		rewrite: /truc, /images/download.jpeg
+		index: index.html
+		cgi: off
 		autoindex: off
+	
 }
 
 server {
