--- a/srcs/response/default.conf
+++ b/srcs/response/default.conf
@@ -17,7 +17,7 @@ server {
 		root:
 		cgi: on
 		autoindex: on
-		default_dir_request: ./default/file
+		index: ./default/file
 		upload_dir: ./upload_her
 
 	location: /salut
@@ -35,7 +35,7 @@ server {
 	location: /test
 		allowed_methods: GET,POST
 		autoindex: off
-		default_dir_request: ./default/file
+		index: ./default/file
 		upload_dir: ./upload_her
 	location: /salut
 		root: /boum
