--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -32,19 +32,22 @@ server {
 		autoindex: on
 
 	location: /test
-		rewrite: /test, /static
-		allowed_methods: GET, DELETE
+		# rewrite: /test, /static
+		allowed_methods: DELETE
 		index: prout.html
 
 	location: /
 		allowed_methods: GET
-		cgi: off
-		index: index.html
-		root: ./data
-
-	location: /cgi
-		allowed_methods: GET, POST
 		cgi: on
+		index:
+		root: ./data
+		autoindex: on
+
+	location: /cgi/php
+		allowed_methods: GET, POST, DELETE
+		index: main.php
+		cgi: on
+		autoindex: on
 
 	location: /static
 		rewrite: /truc, /images/download.jpeg
