correcting path for delete/post.php

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -45,7 +45,7 @@ server {
 
 	location: /cgi/php
 		allowed_methods: GET, POST, DELETE
-		index: main.php
+		# index: main.php
 		cgi: on
 		autoindex: on
 
