directory listing ok

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -40,14 +40,15 @@ server {
 		allowed_methods: GET
 		cgi: on
 		index:
-		root: ./data
+		root: data
 		autoindex: on
 
 	location: /cgi/php
 		allowed_methods: GET, POST, DELETE
 		# index: main.php
 		cgi: on
-		autoindex: on
+		autoindex: off
+		root: data
 
 	location: /static
 		rewrite: /truc, /images/download.jpeg
