directory listing better

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -45,9 +45,9 @@ server {
 
 	location: /cgi/php
 		allowed_methods: GET, POST, DELETE
-		# index: main.php
+		index: main.php
 		cgi: on
-		autoindex: off
+		autoindex: on
 		root: data
 
 	location: /static
