--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -22,8 +22,8 @@
 
 server {
 	listen: 127.0.0.1:8000
-	server_name
-	client_max_body_size: 1000
+	server_name: webserv.com
+	client_max_body_size: 10
 	error_page: 404, ./data/error_pages/404.html
 
 	location: /static/delete
@@ -33,14 +33,15 @@ server {
 
 	location: /test
 		# rewrite: /test, /static
-		allowed_methods: DELETE
-		index: prout.html
+		# allowed_methods: DELETE
+		# index: prout.html
 
 	location: /
 		allowed_methods: GET
 		cgi: on
 		index:
 		root: data
+		index: cgi/php/main.php
 		autoindex: on
 
 	location: /cgi/php
@@ -51,6 +52,7 @@ server {
 		root: data
 
 	location: /static
+		allowed_methods: GET, POST
 		rewrite: /truc, /images/download.jpeg
 		index: index.html
 		cgi: off
@@ -63,6 +65,6 @@ server {
 }
 
 server {
-	listen: 127.0.0.1:80
+	listen: 127.0.0.1:8000
 	server_name: test.com
 }
