upload file but request sometime splited

--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -23,7 +23,7 @@
 server {
 	listen: 127.0.0.1:8000
 	server_name: webserv.com
-	client_max_body_size: 10
+	client_max_body_size: 10000
 	error_page: 404, ./data/error_pages/404.html
 
 	location: /static/delete
@@ -50,6 +50,7 @@ server {
 		cgi: on
 		autoindex: on
 		root: data
+		upload_dir: data/upload
 
 	location: /static
 		allowed_methods: GET, POST
