--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -37,7 +37,7 @@ server {
 		# index: prout.html
 
 	location: /
-		allowed_methods: GET
+		allowed_methods: GET, POST
 		cgi: on
 		index:
 		root: data
@@ -50,22 +50,25 @@ server {
 		cgi: on
 		autoindex: on
 		root: data
-		upload_dir: data/upload
+		upload_dir: /data/cgi/php/saved_files/
 
 	location: /static
 		allowed_methods: GET, POST
 		rewrite: /truc, /images/download.jpeg
-		index: index.html
+		index:
 		cgi: off
-		autoindex: off
+		autoindex: on
 	
 }
 
 server {
-	listen: 0.0.0.0:8000
-}
-
-server {
-	listen: 127.0.0.1:8000
-	server_name: test.com
+	listen: 0.0.0.0:8002
+	server_name: coucou.fr
+	location: /
+		allowed_methods: GET
+		cgi: on
+		index:
+		root: data
+		index: 
+		autoindex: on
 }
