--- a/config_files/default.conf
+++ b/config_files/default.conf
@@ -38,6 +38,7 @@ server {
 
 	location: /
 		allowed_methods: GET, POST
+		rewrite: /coucou, /cgi/php/
 		cgi: on
 		index:
 		root: data
@@ -63,12 +64,25 @@ server {
 
 server {
 	listen: 0.0.0.0:8002
-	server_name: coucou.fr
+	server_name: server.2.com
 	location: /
 		allowed_methods: GET
-		cgi: on
-		index:
+		cgi: off
 		root: data
-		index: 
+		index:	
 		autoindex: on
+	location: /test
+		allowed_methods: GET, DELETE
+		cgi: off
+		root: data
+}
+
+server {
+	listen: 0.0.0.0:8004
+	server_name: server.3.coucou
+	client_max_body_size: 10
+	location: /
+		allowed_methods: GET, POST
+		cgi: off
+		autoindex: off
 }
